Refactored filesystem code Implemented FilesystemServiceTest